<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahData">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@string/nama" />

            <EditText
                android:id="@+id/txtNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Masukan Nama"

                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jk" />

            <RadioGroup
                android:id="@+id/rbJk"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/rbLaki"
                    android:layout_width="186dp"
                    android:layout_height="match_parent"
                    android:text="@string/laki" />

                <RadioButton
                    android:id="@+id/rbPerempuan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/perempuan" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pekerjaan" />

            <Spinner
                android:id="@+id/spnPekerjaan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/pekerjaan" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tanggal_lahir" />


            <CalendarView
                android:id="@+id/txtCalender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />



            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat" />

            <EditText
                android:id="@+id/txtalamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Masukan Alamat"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/txtView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_telpon" />

            <EditText
                android:id="@+id/txtTelpon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Masukan Nomer Telpon"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Masukan Email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/catatan" />

            <EditText
                android:id="@+id/txtCatatan"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="Masukan Catatan"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnSimpan"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_simpan"
                    android:onClick="simpan"
                    android:text="@string/simpan"
                    android:textColor="#FFF" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnBatal"
                    android:layout_width="160dp"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/btn_batal"
                    android:text="@string/batal"
                    android:textColor="#FFF" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>